# ai-that-works

./: .gitignore  HOWTO.md  README.md  data.json  feed.xml
2025-12-02-multimodal-evals/: README.md  load_cord_dataset.py  main.py  meta.md  pyproject.toml  transcript.md
2025-12-02-multimodal-evals/baml_src/: clients.baml  receipts.baml
2025-12-02-multimodal-evals/results/20251106_132526/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251106_132827/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251106_133339/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251106_160320/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251106_165359/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251107_072836/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251107_103452/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251107_124617/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/results/20251201_223504/: detailed_results.json  metadata.json  summary.json
2025-12-02-multimodal-evals/src/: README.md  __init__.py  receipt_evaluator.py  run_streamlit.py  streamlit_app.py  test_evaluator.py
level-3-code/large_scale_classification/: .gitignore  README.md  README_GUI.md  TROUBLESHOOTING.md  UI_UX_Knowledge.md  gui.md  pyproject.toml  streamlit_app.py
level-3-code/large_scale_classification/scripts/: README.md
(+281 files in other folders)
